tests/wormhole/sfpi/gold/warn_spill.txt
In file included from ../../../include/sfpi.h:1540,
                 from test.h:11,
                 from warn.cc:5:
../../../include/wormhole/sfpi_imp.h: In function 'void spill()':
../../../include/wormhole/sfpi_imp.h:91:11: fatal error: cannot store sfpu register (register spill)
   91 |     assign(__builtin_rvtt_sfploadi_ex(SFPLOADI_EX_MOD0_FLOAT, f32asui(val)));
      |     ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
